[gd_scene load_steps=7 format=2]

[ext_resource path="res://challenges/week4/gfx/cards/card-back.png" type="Texture" id=1]
[ext_resource path="res://challenges/week4/scenes/card/card.gd" type="Script" id=2]
[ext_resource path="res://common/sfx/clics/click_up.wav" type="AudioStream" id=3]
[ext_resource path="res://common/sfx/clics/click_down.wav" type="AudioStream" id=4]
[ext_resource path="res://common/gfx/particle/star.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 60, 49 )

[node name="card" type="Area2D"]
monitoring = false
monitorable = false
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="back" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="front" type="Sprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="ShowCardSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="HideCardSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="MatchParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 15
one_shot = true
randomness = 0.24
texture = ExtResource( 5 )
emission_shape = 1
emission_sphere_radius = 27.15
spread = 23.15
gravity = Vector2( 0, 0 )
angular_velocity = 128.68
angular_velocity_random = 0.19
radial_accel = 39.31
scale_amount = 0.1
scale_amount_random = 0.5

[connection signal="hide_me" from="." to="." method="_on_card_hide_me"]
[connection signal="input_event" from="." to="." method="_on_card_input_event"]
[connection signal="matched" from="." to="." method="_on_card_matched"]
[connection signal="set_type" from="." to="." method="_on_card_set_type"]
[connection signal="show_me" from="." to="." method="_on_card_show_me"]
